# Ai-tourist-safety

./: .env.example  .gitignore  AGENT_IMPLEMENTATION.md  DOCUMENTATION.md  Dockerfile  Makefile  README.md  claude.md  docker-compose.yml  pyproject.toml
app/agents/: risk_intelligence.py  scheduler.py  sources.py  triage.py  triage_types.py
app/db/: enums.py  models.py
app/detection/: adapters.py  (+1 more)
backend/: .dockerignore  .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: seen_store.py  sources.py
backend/app/api/: auth.py  deps.py  health.py  incidents.py  locations.py  me.py  places.py  police.py  risk.py  serializers.py  tourists.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  enums.py  models.py  session.py  spatial.py
backend/app/db/migrations/versions/: a155b5ee8b72_initial_schema.py  a84e5031f028_add_users_table.py
backend/app/detection/: crowd.py  geo.py  geofence.py  inactivity.py  route_deviation.py  types.py
backend/app/ml/: dataset.py  features.py
backend/app/ml/lstm/: dataset.py  features.py  infer.py  model.py
backend/app/orchestrator/: orchestrator.py
backend/app/schemas/: api.py  auth.py  geo.py  tourist.py  zone.py
backend/app/services/: places.py  retention.py  routing.py  security.py  tourist_status.py
backend/docker/: entrypoint.sh
backend/notebooks/: area_risk_training_colab.ipynb
backend/scripts/: run_risk_agent.py  seed.py  train_lstm.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_auth.py  test_detection.py  test_lstm.py  test_me.py  test_places.py  test_police.py  test_synthetic.py
docker/: postgres.Dockerfile
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
notebooks/: risk_model_training.ipynb
scripts/: demo_detection.py  demo_orchestrator.py  demo_triage.py  run_risk_agent.py  seed.py  synthetic.py  train_risk_model.py
tests/: conftest.py  test_agents.py  test_health.py  test_ml.py  test_models.py  test_orchestrator.py  test_retention.py  test_triage.py
(+32 files in other folders)
